feat: optional spec configs (#83)
* rebase

* test: fix mocks

* fix: remove regex
